[gd_scene load_steps=10 format=2]

[ext_resource path="res://response/matrix-response/background.png" type="Texture" id=1]
[ext_resource path="res://response/matrix-response/matrix-man/matrix-man.tscn" type="PackedScene" id=2]
[ext_resource path="res://response/matrix-response/matrix-response.gd" type="Script" id=3]
[ext_resource path="res://response/matrix-response/red-pill/red-pill.tscn" type="PackedScene" id=4]
[ext_resource path="res://response/matrix-response/city.wav" type="AudioStream" id=5]
[ext_resource path="res://response/matrix-response/crowd.wav" type="AudioStream" id=6]
[ext_resource path="res://response/matrix-response/flash/flash.tscn" type="PackedScene" id=7]
[ext_resource path="res://response/matrix-response/wipe/wipe.tscn" type="PackedScene" id=8]
[ext_resource path="res://response/matrix-response/code-text/code-text.tscn" type="PackedScene" id=9]

[node name="MatrixResponse" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 298 )
scale = Vector2( 1, 1.00667 )
texture = ExtResource( 1 )

[node name="MatrixMan" parent="." instance=ExtResource( 2 )]
position = Vector2( 511.304, 372.077 )
scale = Vector2( 0.33777, 0.33777 )

[node name="RedPill" parent="." instance=ExtResource( 4 )]
position = Vector2( 512, 672 )
scale = Vector2( 0.243243, 0.243243 )

[node name="Flash" parent="." instance=ExtResource( 7 )]
position = Vector2( 512, 298 )

[node name="Wipe" parent="." instance=ExtResource( 8 )]
position = Vector2( 513.179, -305.489 )

[node name="Control" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="CodeText" parent="Control" instance=ExtResource( 9 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -350.0
margin_top = 10.0
margin_right = 350.0
margin_bottom = 0.0

[node name="City" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Crowd" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0
